// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadableDocument renders document item 1`] = `
<Fragment>
  <Button
    className="text-bold"
    onClick={[Function]}
    type="button"
    variation="unstyled"
  >
    Other notice (PDF)
  </Button>
</Fragment>
`;

exports[`DownloadableDocument renders document with icon and additional classname item 1`] = `
<Fragment>
  <Button
    className="text-bold display-flex flex-align-center"
    onClick={[Function]}
    type="button"
    variation="unstyled"
  >
    <Icon
      fill="currentColor"
      name="file_present"
      size={3}
    />
    Other notice (PDF)
  </Button>
</Fragment>
`;
